// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconGroup [common] example testing should match snapshot(s) for 0_stateful 1`] = `
<span
  className="lucid-IconGroup"
>
  <IconBox
    callbackId={0}
    className="lucid-IconGroup-IconBox"
    hasIndeterminate={true}
    isDisabled={false}
    isIndeterminate={false}
    isSelected={false}
    key="0"
    kind="checkbox"
    onClick={[Function]}
  >
    <IconBox.Icon>
      <ClockIcon />
    </IconBox.Icon>
    Zero
  </IconBox>
  <IconBox
    callbackId={1}
    className="lucid-IconGroup-IconBox"
    hasIndeterminate={false}
    isDisabled={false}
    isIndeterminate={false}
    isSelected={false}
    key="1"
    kind="checkbox"
    onClick={[Function]}
  >
    <IconBox.Icon>
      <ClockIcon />
    </IconBox.Icon>
    One
  </IconBox>
  <IconBox
    callbackId={2}
    className="lucid-IconGroup-IconBox"
    hasIndeterminate={false}
    isDisabled={false}
    isIndeterminate={false}
    isSelected={false}
    key="2"
    kind="checkbox"
    onClick={[Function]}
  >
    <IconBox.Icon>
      <ClockIcon />
    </IconBox.Icon>
    Two
  </IconBox>
  <IconGroup.Box
    hasIndeterminate={true}
  >
    <IconBox.Icon>
      <ClockIcon />
    </IconBox.Icon>
    Zero
  </IconGroup.Box>
  <IconGroup.Box>
    <IconBox.Icon>
      <ClockIcon />
    </IconBox.Icon>
    One
  </IconGroup.Box>
  <IconGroup.Box>
    <IconBox.Icon>
      <ClockIcon />
    </IconBox.Icon>
    Two
  </IconGroup.Box>
</span>
`;

exports[`IconGroup [common] example testing should match snapshot(s) for 1_radioGroup 1`] = `
<span
  className="lucid-IconGroup"
>
  <IconBox
    callbackId={0}
    className="lucid-IconGroup-IconBox"
    hasIndeterminate={false}
    isDisabled={false}
    isIndeterminate={false}
    isSelected={false}
    key="0"
    kind="radio"
    onClick={[Function]}
  >
    <IconBox.Icon>
      <ClockIcon />
    </IconBox.Icon>
    Zero
  </IconBox>
  <IconBox
    callbackId={1}
    className="lucid-IconGroup-IconBox"
    hasIndeterminate={false}
    isDisabled={false}
    isIndeterminate={false}
    isSelected={false}
    key="1"
    kind="radio"
    onClick={[Function]}
  >
    <IconBox.Icon>
      <ClockIcon />
    </IconBox.Icon>
    One
  </IconBox>
  <IconBox
    callbackId={2}
    className="lucid-IconGroup-IconBox"
    hasIndeterminate={false}
    isDisabled={false}
    isIndeterminate={false}
    isSelected={false}
    key="2"
    kind="radio"
    onClick={[Function]}
  >
    <IconBox.Icon>
      <ClockIcon />
    </IconBox.Icon>
    Two
  </IconBox>
  <IconGroup.Box>
    <IconBox.Icon>
      <ClockIcon />
    </IconBox.Icon>
    Zero
  </IconGroup.Box>
  <IconGroup.Box>
    <IconBox.Icon>
      <ClockIcon />
    </IconBox.Icon>
    One
  </IconGroup.Box>
  <IconGroup.Box>
    <IconBox.Icon>
      <ClockIcon />
    </IconBox.Icon>
    Two
  </IconGroup.Box>
</span>
`;

exports[`IconGroup [common] example testing should match snapshot(s) for 2_stateless 1`] = `
<span
  className="lucid-IconGroup Custom-Class"
>
  <IconBox
    callbackId={0}
    className="lucid-IconGroup-IconBox Custom-Class-IconBox"
    hasIndeterminate={false}
    isDisabled={false}
    isIndeterminate={false}
    isSelected={true}
    key="0"
    kind="checkbox"
    onClick={[Function]}
  >
    <IconBox.Icon>
      <ClockIcon />
    </IconBox.Icon>
    Zero
  </IconBox>
  <IconBox
    callbackId={1}
    className="lucid-IconGroup-IconBox my-custom-iconbox-class Custom-Class-IconBox"
    hasIndeterminate={false}
    isDisabled={false}
    isIndeterminate={false}
    isSelected={false}
    key="1"
    kind="checkbox"
    onClick={[Function]}
  >
    <IconBox.Icon>
      <ClockIcon />
    </IconBox.Icon>
    One
  </IconBox>
  <IconBox
    callbackId={2}
    className="lucid-IconGroup-IconBox Custom-Class-IconBox"
    hasIndeterminate={false}
    isDisabled={false}
    isIndeterminate={false}
    isSelected={false}
    key="2"
    kind="checkbox"
    onClick={[Function]}
  >
    <IconBox.Icon>
      <ClockIcon />
    </IconBox.Icon>
    Two
  </IconBox>
  <IconBox
    callbackId={3}
    className="lucid-IconGroup-IconBox Custom-Class-IconBox"
    hasIndeterminate={false}
    isDisabled={false}
    isIndeterminate={false}
    isSelected={false}
    key="3"
    kind="checkbox"
    onClick={[Function]}
  >
    <IconBox.Icon>
      <ClockIcon />
    </IconBox.Icon>
    Three
  </IconBox>
  <IconBox
    callbackId={4}
    className="lucid-IconGroup-IconBox Custom-Class-IconBox"
    hasIndeterminate={false}
    isDisabled={false}
    isIndeterminate={false}
    isSelected={false}
    key="4"
    kind="checkbox"
    onClick={[Function]}
  >
    <IconBox.Icon>
      <ClockIcon />
    </IconBox.Icon>
    Four
  </IconBox>
  <IconBox
    callbackId={5}
    className="lucid-IconGroup-IconBox Custom-Class-IconBox"
    hasIndeterminate={false}
    isDisabled={false}
    isIndeterminate={true}
    isSelected={false}
    key="5"
    kind="checkbox"
    onClick={[Function]}
  >
    <IconBox.Icon>
      <ClockIcon />
    </IconBox.Icon>
    Five
  </IconBox>
  <IconBox
    callbackId={6}
    className="lucid-IconGroup-IconBox Custom-Class-IconBox"
    hasIndeterminate={false}
    isDisabled={true}
    isIndeterminate={true}
    isSelected={false}
    key="6"
    kind="checkbox"
    onClick={[Function]}
  >
    <IconBox.Icon>
      <ClockIcon />
    </IconBox.Icon>
    Six
  </IconBox>
  <IconBox
    callbackId={7}
    className="lucid-IconGroup-IconBox Custom-Class-IconBox"
    hasIndeterminate={false}
    isDisabled={false}
    isIndeterminate={false}
    isSelected={true}
    key="7"
    kind="checkbox"
    onClick={[Function]}
  >
    <IconBox.Icon>
      <ClockIcon />
    </IconBox.Icon>
    Seven
  </IconBox>
  <IconBox
    callbackId={8}
    className="lucid-IconGroup-IconBox Custom-Class-IconBox"
    hasIndeterminate={false}
    isDisabled={false}
    isIndeterminate={true}
    isSelected={false}
    key="8"
    kind="checkbox"
    onClick={[Function]}
  >
    <IconBox.Icon>
      <ClockIcon />
    </IconBox.Icon>
    Eight
  </IconBox>
  <IconBox
    callbackId={9}
    className="lucid-IconGroup-IconBox Custom-Class-IconBox"
    hasIndeterminate={false}
    isDisabled={false}
    isIndeterminate={false}
    isSelected={false}
    key="9"
    kind="checkbox"
    onClick={[Function]}
  >
    <IconBox.Icon>
      <ClockIcon />
    </IconBox.Icon>
    Nine
  </IconBox>
  <IconGroup.Box
    isSelected={true}
  >
    <IconBox.Icon>
      <ClockIcon />
    </IconBox.Icon>
    Zero
  </IconGroup.Box>
  <IconGroup.Box
    className="my-custom-iconbox-class"
  >
    <IconBox.Icon>
      <ClockIcon />
    </IconBox.Icon>
    One
  </IconGroup.Box>
  <IconGroup.Box>
    <IconBox.Icon>
      <ClockIcon />
    </IconBox.Icon>
    Two
  </IconGroup.Box>
  <IconGroup.Box>
    <IconBox.Icon>
      <ClockIcon />
    </IconBox.Icon>
    Three
  </IconGroup.Box>
  <IconGroup.Box>
    <IconBox.Icon>
      <ClockIcon />
    </IconBox.Icon>
    Four
  </IconGroup.Box>
  <IconGroup.Box
    isIndeterminate={true}
  >
    <IconBox.Icon>
      <ClockIcon />
    </IconBox.Icon>
    Five
  </IconGroup.Box>
  <IconGroup.Box
    isDisabled={true}
  >
    <IconBox.Icon>
      <ClockIcon />
    </IconBox.Icon>
    Six
  </IconGroup.Box>
  <IconGroup.Box>
    <IconBox.Icon>
      <ClockIcon />
    </IconBox.Icon>
    Seven
  </IconGroup.Box>
  <IconGroup.Box>
    <IconBox.Icon>
      <ClockIcon />
    </IconBox.Icon>
    Eight
  </IconGroup.Box>
  <IconGroup.Box>
    <IconBox.Icon>
      <ClockIcon />
    </IconBox.Icon>
    Nine
  </IconGroup.Box>
</span>
`;

exports[`IconGroup [common] example testing should match snapshot(s) for 3_as-props 1`] = `
<span
  className="lucid-IconGroup"
>
  <IconBox
    Icon={<ClockIcon />}
    callbackId={0}
    className="lucid-IconGroup-IconBox"
    hasIndeterminate={true}
    isDisabled={false}
    isIndeterminate={false}
    isSelected={false}
    key="0"
    kind="checkbox"
    onClick={[Function]}
  >
    Zero
  </IconBox>
  <IconBox
    Icon={<ClockIcon />}
    callbackId={1}
    className="lucid-IconGroup-IconBox"
    hasIndeterminate={false}
    isDisabled={false}
    isIndeterminate={false}
    isSelected={false}
    key="1"
    kind="checkbox"
    onClick={[Function]}
  >
    One
  </IconBox>
  <IconBox
    Icon={<ClockIcon />}
    callbackId={2}
    className="lucid-IconGroup-IconBox"
    hasIndeterminate={false}
    isDisabled={false}
    isIndeterminate={false}
    isSelected={false}
    key="2"
    kind="checkbox"
    onClick={[Function]}
  >
    Two
  </IconBox>
  <IconBox
    Icon={<ClockIcon />}
    callbackId={3}
    className="lucid-IconGroup-IconBox"
    hasIndeterminate={false}
    isDisabled={false}
    isIndeterminate={false}
    isSelected={false}
    key="3"
    kind="checkbox"
    onClick={[Function]}
  >
    Three
  </IconBox>
</span>
`;
